Closed
Bug 1992215
Opened 14 days ago
Closed 12 days ago
Navigation API crash occurs in CreateLoadingSessionHistoryEntryForLoad on Google docs
Categories
(Core :: DOM: Navigation, defect)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
145 Branch
Tracking | Status | |
---|---|---|
firefox145 | --- | fixed |
People
(Reporter: avandolder, Assigned: avandolder)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
See https://crash-stats.mozilla.org/report/index/aac897e5-e069-404e-b1db-3a77c0250930 and related crashes.
Assignee | ||
Comment 1•14 days ago
|
||
Updated•13 days ago
|
Severity: -- → S2
Updated•13 days ago
|
Attachment #9517843 -
Attachment description: Bug 1992215 - Only attempt to reconstruct the contiguous entries list when the entry being loaded is not already within a list. r?#dom-core → Bug 1992215 - Clear the contiguous entries list when the browsing context is detached. r?#dom-core
Pushed by avandolder@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/eb8186dfcde5
https://hg.mozilla.org/integration/autoland/rev/0cf6408f0c3b
Clear the contiguous entries list when the browsing context is detached. r=dom-core,smaug
Status: ASSIGNED → RESOLVED
Closed: 12 days ago
status-firefox145:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 145 Branch
Updated•2 days ago
|
QA Whiteboard: [qa-triage-done-c146/b145]
You need to log in
before you can comment on or make changes to this bug.
Description
•