Bug 1992215 - Clear the contiguous entries list when the browsing context is detached. r=dom-core,smaug

Differential Revision: https://phabricator.services.mozilla.com/D267275