docshell/base/BrowsingContext.cpp
@@ -1019,6 +1019,7 @@ void BrowsingContext::Detach(bool aFromIPC) {
 
   if (XRE_IsParentProcess()) {
     Canonical()->AddPendingDiscard();
+    Canonical()->mActiveEntryList.clear();
   }
   auto callListeners =
       MakeScopeExit([&, listeners = std::move(mDiscardListeners), id = Id()] {
